# SWE4_CPP_MiniBreakout

./: .gitignore  ASSESSMENT.md  README.md  SOLUTION.md  run-cmake.bat
src/: CMakeLists.txt
src/breakout/: main.c
src/breakout/src/: main.cpp
